feat: finish the exercise

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 .vs/DuelAuxSommet/FileContentIndex/a2cbd5cb-30f8-4a06-8a5f-a4d33133986f.vsidx
+.vs/DuelAuxSommet/FileContentIndex/0fea8265-a3c1-473f-b03c-a3330918166e.vsidx
+.vs/DuelAuxSommet/FileContentIndex/25899096-35c6-40b0-96f3-8b3ee07f292c.vsidx
